# skillmon

./: .gitignore  CLAUDE.md  CONTEXT-MAP.md  LICENSE-MIT  node_modules  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: DESIGN.md
docs/adr/: 0001-use-tauri.md  0002-claude-code-first-harness-adapter.md  0003-track-both-footprint-and-attributed-usage.md  0004-native-tray-ui-per-os.md  0005-native-first-attribution-algorithm.md  0006-exact-api-footprint-tokenizer.md  0007-quarantine-move-personal-skill-disable.md  0008-rusqlite-persistence.md  0009-svelte-typescript-frontend.md  0010-package-manager-pnpm.md  0011-dual-license.md  0012-bundle-identifier.md  0013-scaffold-into-temp-dir.md  0014-project-repo-discovery-via-transcripts.md  0015-plugin-enablement-is-repo-scoped.md  0016-always-on-text-from-transcript.md  0017-on-invoke-and-on-demand-text-source.md  0018-reference-model-is-internal-not-user-facing.md  0019-rescan-and-recompute-triggers.md  0020-api-key-in-os-keychain.md  0021-scan-orchestration-on-trait-watcher-signals.md  0022-incremental-listing-index-memo.md  0023-api-key-settings-validate-and-preserve.md  0024-attributed-usage-store.md  0025-rolling-window-and-toast-budget.md  0026-manager-root-derived-structurally.md  0027-managing-tool-seam-and-removal-scope.md  0028-on-demand-walk-excludes-non-reference-content.md  0029-trash-retention-purge-and-tombstones.md  0030-plugin-skills-follow-the-manifest.md  0031-plugin-root-skill-name-from-frontmatter.md  0032-apple-design-motion-and-materials.md  0033-row-collapses-to-always-on.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/superpowers/plans/: 2026-07-02-footprint-counter.md  2026-07-02-skill-discovery.md
src/: CONTEXT.md  app.html
src-tauri/: CONTEXT.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: tray.rgba
src-tauri/src/: lib.rs  self_write.rs
src-tauri/src/adapters/claude_code/: footprint_text.rs  frontmatter.rs  listing_cache.rs  mod.rs  on_demand_cache.rs  paths.rs  settings.rs  usage.rs  usage_cache.rs  watcher.rs
src-tauri/src/adapters/claude_code/discovery/: mod.rs  personal.rs  plugin.rs  project.rs  scan.rs  transcript.rs
src-tauri/src/domain/: budget.rs  footprint.rs  harness.rs  mod.rs  removal.rs  report.rs  scan.rs  skill.rs
src-tauri/src/footprint/: api_key_service.rs  api_key_store.rs  cache.rs  compute.rs  count_tokens_client.rs  hashing.rs  mod.rs  tokenizer.rs
src-tauri/src/managing_tool/: agents.rs  gstack.rs  mod.rs
src-tauri/src/removal/: fs_ops.rs  mod.rs  plan.rs  store.rs
src/lib/: removal.test.ts  removal.ts  skills.test.ts  skills.ts
src/routes/: +page.svelte
