[package]
name = "skillmon"
version = "0.1.0"
description = "Menu-bar/system-tray app monitoring Claude Code skills"
authors = ["Sky Seah"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
serde_yaml_ng = "0.10"
thiserror = "2"
dirs = "6"
# Estimate tokenizer (ADR 0006). bpe-openai's o200k_base is a linear-time BPE
# that is byte-for-byte identical to tiktoken-rs's o200k_base (asserted by the
# exact-parity oracle test in `tokenizer.rs`) but without the fancy-regex
# backtracking cost. Pinned exact: any bump must re-run the parity oracle.
bpe-openai = "=0.3.0"
sha2 = "0.11"
rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.13", features = ["blocking", "json"] }
keyring = "4"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
# Kept only as the authoring-time oracle for the estimate-tokenizer parity test
# (ADR 0006). Never linked into the shipping binary.
tiktoken-rs = "0.12"
